--- a/HiveSimulator.csproj
+++ b/HiveSimulator.csproj
@@ -47,6 +47,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bee.cs" />
+    <Compile Include="BeeControl.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="BeeMessage.cs" />
     <Compile Include="BeeState.cs" />
     <Compile Include="Flower.cs" />
@@ -71,6 +74,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -84,6 +88,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Bee animation 1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Bee animation 2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Bee animation 3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Bee animation 4.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
