--- a/HiveSimulator.csproj
+++ b/HiveSimulator.csproj
@@ -59,12 +59,31 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FieldForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FieldForm.Designer.cs">
+      <DependentUpon>FieldForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="HiveForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HiveForm.Designer.cs">
+      <DependentUpon>HiveForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Hive.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Renderer.cs" />
     <Compile Include="World.cs" />
+    <EmbeddedResource Include="FieldForm.resx">
+      <DependentUpon>FieldForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HiveForm.resx">
+      <DependentUpon>HiveForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -100,6 +119,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Bee animation 4.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Hive %28inside%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Hive %28outside%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Hive %28inside%291.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Hive %28outside%291.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Flower.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
